--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "eframe_template"
+name = "great_circle_erp"
 version = "0.1.0"
 authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
 edition = "2021"
@@ -9,12 +9,14 @@ rust-version = "1.72"
 [dependencies]
 egui = "0.25.0"
 eframe = { version = "0.25.0", default-features = false, features = [
-    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
-    "default_fonts", # Embed the default egui fonts.
+#    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
+#    "default_fonts", # Embed the default egui fonts.
     "glow",          # Use the glow rendering backend. Alternative: "wgpu".
-    "persistence",   # Enable restoring app state when restarting the app.
+    # "persistence",   # Enable restoring app state when restarting the app.
 ] }
 log = "0.4"
+cgmath = "*"
+png="*"
 
 # You only need serde if you want app persistence:
 serde = { version = "1", features = ["derive"] }
